# osl-agent-prototype

./: .cursorrules  .env.example  .gitignore  HANDOFF-KNOWSHOWGO-SERVICE.txt  HANDOFF.md  README.md  SETUP-API-KEYS.md  copilot-prompt.txt  knowshowgo.bundle  main.py  pyproject.toml  requirements.txt
config/: default.yaml  procedure_graph_schema.json  tts.yaml
docs/: AGENT-HANDOFF.md  API-KEYS-SETUP.md  KNOWSHOWGO-FUTURE-ROADMAP.md  KNOWSHOWGO-SERVICE-HANDOFF.md  KNOWSHOWGO-VISION.md  MASTER-PLAN.md  PROCEDURE-GRAPH-SCHEMA.md  QUICK-START-SUBSCRIPTIONS.md  SETUP.md  agent-learning-prototype-plan.md  architecture.md  continual-learning-summary.md  core-learning-loop-plan.md  cpms-quickstart.md  cpms-repo-tasks.md  cpms-starter-message.txt  design-doc-implementation-complete.md  development-plan.md  development-priorities-plan.md  e2e-continual-learning-tests.md  enhanced-learning-system.md  gpt-plans.md  knowshowgo-ontology-architecture.md  live-mode-setup.md  llm-provider-setup.md  opus-next-steps.md  salvage-osl-agent-prototype.txt  session-notes.md  tdd-iterative-plan.md  tts-stt-integration.md
scripts/: cursor_tts_notify.py  debug_daemon.sh  dev.sh  install_arango_ca.sh  install_local_embedder.sh  live_survey_flow.yaml  log_summary.py  run_agent_ui.sh  run_live_flow.py  run_live_form_flow.sh  run_live_survey_flow.sh  speak_synopsis.py  start_daemon.ps1  start_knowshowgo_service.sh  supervise_agent.sh  test_e2e_learning_live.ps1  test_form_transfer.py  test_live_learning_workflow.ps1  test_ultimate_goal_debug.ps1  test_ultimate_goal_simple.ps1  watch_agent_logs.sh
tests/: conftest.py  conftest_info.py  (+120 more)
(+85 files in other folders)
